[gd_scene load_steps=4 format=2]

[ext_resource path="res://Slingshot.gd" type="Script" id=1]
[ext_resource path="res://assets/slingshot.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 78.3135

[node name="Slingshot" type="Node2D" groups=["Slingshot"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="LeftLine" type="Line2D" parent="."]
points = PoolVector2Array( 33, -82, -97, -83 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="RightLine" type="Line2D" parent="."]
points = PoolVector2Array( -26, -83, -97, -83 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2( 7, -83 )
shape = SubResource( 1 )

[node name="CenterOfSlingshot" type="Position2D" parent="."]
position = Vector2( 6, -83 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Tween" type="Tween" parent="."]

[node name="Trajectory" type="Line2D" parent="."]
default_color = Color( 1, 0, 0.164706, 1 )

[connection signal="input_event" from="TouchArea" to="." method="_on_TouchArea_input_event"]
